# urishell

./: .gitignore  README.md  pyproject.toml  urishell.markpact.md
markpacts/: urishell.markpact.md
urishell/: __init__.py  handlers.py  manifest.yaml
