[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urishell"
version = "0.1.0"
description = "shell:// URI capability pack"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["uricontrol>=0.1.8"]

[tool.uv.sources]

[tool.setuptools.packages.find]
where = ["."]
include = ["urishell*"]

[tool.setuptools.package-data]
urishell = ["manifest.yaml"]
